--- a/lib/raffley_web/controllers/rule_html/index.html.heex
+++ b/lib/raffley_web/controllers/rule_html/index.html.heex
@@ -3,7 +3,11 @@
   <p><%= @emojis %></p>
   <ol>
     <%= for rule <- @rules do %>
-      <li><%= rule.text %></li>
+      <li>
+        <a href={~p"/rules/#{rule.id}"}>
+          <%= rule.text %>
+        </a>
+      </li>
     <% end %>
   </ol>
 </div>
